fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 html {
     scroll-behavior: smooth;
     background-color: #222227;
+    overflow-x: hidden;
 }
 
 h2 {
@@ -62,7 +63,7 @@ h2 {
 }
 
 #tanggalwaktu {
-    font-family: 'Neue Montreal';
+    font-family: 'Neue Montreal','Overpass';
     font-weight: bold;
     position: absolute;
     top: 20px;
@@ -72,7 +73,7 @@ h2 {
 }
 
 .kanan {
-    font-family: 'Neue Montreal';
+    font-family: 'Neue Montreal','Overpass';
     font-weight: bold;
     position: absolute;
     top: 20px;
@@ -114,7 +115,7 @@ h2 {
 }
 
 .clear {
-    clear: both;
+    clear: left;
 }
 
 
@@ -177,7 +178,7 @@ h2 {
     width: 30px;
     border: 2px solid rgb(255, 255, 255);
     position: absolute;
-    left: 50%;
+    left: 48.5%;
     bottom: 20px;
     border-radius: 50px;
     cursor: pointer;
@@ -188,7 +189,7 @@ h2 {
     content: "";
     position: absolute;
     top: 20%;
-    left: 50%;
+    left: 48.5%;
     height: 10px;
     width: 10px;
     transform: translate(-50%, -100%) rotate(45deg);
